@@ -21,6 +21,7 @@
 ./Tests/Mono.Rocks.Tests/IEnumerableTest.cs
 ./Tests/Mono.Rocks.Tests/ICustomAttributeProviderTest.cs
 ./Tests/Mono.Rocks.Tests/TuplesTest.cs
+./Tests/Mono.Rocks.Tests/TypeTest.cs
 ./Tests/Mono.Rocks.Tests/UInt16Test.cs
 ./Tests/Mono.Rocks.Tests/UInt32Test.cs
 ./Tests/Mono.Rocks.Tests/UInt64Test.cs
