@@ -24,6 +24,7 @@
 ./Mono.Rocks/TextReader.cs
 ./Mono.Rocks/Tuple.cs
 ./Mono.Rocks/Tuples.cs
+./Mono.Rocks/Type.cs
 ./Mono.Rocks/UInt16.cs
 ./Mono.Rocks/UInt32.cs
 ./Mono.Rocks/UInt64.cs
