@@ -1,3 +1,10 @@
+2008-09-26  Jonathan Pryor  <jpryor@novell.com>
+
+	* Mono.Rocks.dll.sources, Mono.Rocks.csproj: Add Mono.Rocks/Type.cs 
+	  to the build.
+	* Mono.Rocks.Tests.dll.sources, Tests/Mono.Rocks.Tests.csproj: Add
+	  Tests/Mono.Rocks.Tests/TypeTest.cs to the build.
+
 2008-09-25  Jonathan Pryor  <jpryor@novell.com>
 
 	* doc/en/**: Add Stream.WriteTo() extension method.
